# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[workspace]
members = ["crates/network", "crates/server", "xtask"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.46.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unused_must_use = "deny"
unreachable_patterns = "warn"

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
allow_attributes = { level = "deny", priority = 1 }
correctness = "deny"
nursery = "deny"
suspicious = "deny"
complexity = "deny"
style = "deny"
perf = "deny"
cargo = "deny"
pedantic = "warn"
dbg_macro = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
