# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[workspace]
members = [
    "crates/server",
    "crates/network/handler",
    "crates/protocol",
    "crates/network/dispatcher",
    "crates/config",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
protocol.path = "crates/protocol"
handler.path = "crates/network/handler"
dispatcher.path = "crates/network/dispatcher"
config.path = "crates/config"

clap = { version = "4.5.41", features = ["derive"], default-features = false }

thiserror = "2.0.12"
tracing = "0.1.41"

bincode = "2.0.1"

tokio = { version = "1.46.1", features = ["macros"] }

[workspace.dependencies.bevy]
version = "0.16.1"
default-features = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unused_must_use = "deny"
unreachable_patterns = "warn"

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
allow_attributes = { level = "forbid", priority = 1 }
correctness = "deny"
nursery = "deny"
suspicious = "deny"
complexity = "deny"
style = "deny"
perf = "deny"
cargo = "deny"
pedantic = "warn"
dbg_macro = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
