[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
description = "External tasks for Crypt of the Lost"
license-file = "../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../README.md"
keywords = ["xtask"]
categories = ["command-line-utilities", "games"]

[dependencies]
clap = { workspace = true }

[lints]
workspace = true
