[package]
name = "config"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost config"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["config"]
categories = ["games"]

[dependencies]
clap.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
bevy.workspace = true
figment = { version = "0.10.19", features = ["toml"] }
tracing.workspace = true
gonfig = "0.1.2"

[lints]
workspace = true
