[package]
name = "config"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost config"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["config"]
categories = ["games"]

[dependencies]
serde.workspace = true
bevy.workspace = true
konfik = "0.1"

[lints]
workspace = true
