# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[package]
name = "debug-client"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost networking"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["debug"]
categories = ["games", "development-tools::debugging"]

[dependencies]
protocol = { path = "../protocol" }

[lints]
workspace = true
