[package]
name = "mods"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost Modding"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["network"]
categories = ["games"]

[dependencies]
bevy = { workspace = true }

[lints]
workspace = true
