# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[package]
name = "mods"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost Modding"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["network"]
categories = ["games"]

[dependencies]
bevy = { workspace = true }
tracing = { workspace = true }
rhai = { version = "1.22.2", features = ["internals"] }
serde = { workspace = true }
toml = "0.9.3"
paq = "1.1.1"
semver = "1.0.26"
sysinfo = "0.37.0"

[lints]
workspace = true
