# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[package]
name = "network"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost networking"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["xtask"]
categories = ["games"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
quinn = "0.11.8"
tokio = { version = "1.46.1", features = [
  "rt",
  "net",
  "rt-multi-thread",
  "macros",
] }
bevy_ecs = { version = "0.16.1", default-features = false }
thiserror = "2.0.12"
rustls-pki-types = "1.12.0"

[lints]
workspace = true
