# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[package]
name = "network"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost networking"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["network"]
categories = ["games"]

[dependencies]
quinn = "0.11.8"
thiserror = { workspace = true }
rustls-pki-types = "1.12.0"
tracing = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
protocol = { workspace = true }
dashmap = "6.1.0"

[lints]
workspace = true
