[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost protocol"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["network", "protocol"]
categories = ["games"]

[dependencies]

[lints]
workspace = true
