# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost protocol"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["network", "protocol"]
categories = ["games"]

[dependencies]
serde.workspace = true
bevy.workspace = true
enum_dispatch = "0.3.13"
derive_more = "2.0.1"

[lints]
workspace = true
