# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Crypts of the Lost Team

[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "Crypt of the Lost server-side"
license-file = "../../LICENSE"
repository = "https://github.com/Sietse2202/crypts-of-the-lost"
readme = "../../README.md"
keywords = ["server", "game"]
categories = ["games"]

[dependencies]
clap.workspace = true
protocol.workspace = true
network.workspace = true
bevy.workspace = true
config.workspace = true

[lints]
workspace = true
